# BoostLogStaticTest

./: CMakeLists.txt  main.cpp
